# libssp2

./: CMakeLists.txt  Makefile
.github/workflows/: build.yml
src/: ssp.cpp  ssp.h
